	* moesi.c: bug fixed in MOESI_FIND_AND_LOCK event. It made some
		asserts fail in very rare cases where a block is accessed
		in a shared cache where it is being currently brought.
		We solve this by locking the whole set.

2009-02-22
	* fu.c: unimportant bug fixed in the 3rd parameter of the calls to
		opt_reg_uint32_list for options fu:fpmult, fu:fpdiv, and
		fu:fpsqrt.
	* elf.c: added file for ELF management, so that the support of the
		problematic bfd library is no longer needed.

2009-02-28
	* moesi.c: bug fixed in MOESI_FIND_AND_LOCK event. The previous
		solution to avoid races in block accesses was incorrect.
		Now, the concept of 'transient tag' is introduced. When
		a block is locked, its temporary tag is stored, so any
		future access will find a hit, and find the block locked
		while unavailable.

2009-03-03
	* commit.c: sanity check that forces running threads to commit at
		least one instruction every 1M cycles. This check was
		performed before as an alarm accounting commits for the
		whole processor.
	* fetch.c: fetch cache removed. Instruction cache accesses are
		only performed if previous fetched block is other than
		the current one.
	* rob.c: removed unused options; '-rob_size' means now the ROB size per
		thread.
	* processor.c: check that kernel is not stuck in p_stages().

2009-03-11
	* Version 2.1 Released

2009-04-07
	* All: SVN new hierarchy with trunk and branches, aimed at being
		accessed by any user who wants to contribute developing.

2009-04-23
	* uop.c, m2s.h, fetch.c, bpred.c: bug fixed. There was a wrong use of
		the uop->inst->size attribute, which was read in an
		obsolete manner after the pointed isa_inst had changed.
		Now it is copied in the uop->size local attribute.

2009-07-21
	* m2s.c: debug information and options changed. There are no more
		huge dumps after a 'fatal' or 'panic' occurs during
		simulation. Instead, this dump is controlled by the
		'-debug:error' parameter.